[package]
name = "rust_testing_ground"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
tokio = { version = "1.43.0", features = ["full"] }
rsa = { version = "0.9.7", features = ["sha2"] }
sha2 = "0.10.8"
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"